串房型資料（初版）

--- a/src/main/resources/public/pages/notic.html
+++ b/src/main/resources/public/pages/notic.html
@@ -43,7 +43,7 @@ Licence URI: https://www.os-templates.com/template-terms
           <ul>
             <li><a href="intro.html">簡介</a></li>
             <li><a href="traffic.html">交通資訊</a></li>
-            <li><a href="notic.html">注意事項</a></li>
+            <li class="active"><a href="notic.html">注意事項</a></li>
           </ul>
         </li>
         <li><a class="drop">最新消息</a>
