--- a/src/main/resources/public/frontend/forgot_password.html
+++ b/src/main/resources/public/frontend/forgot_password.html
@@ -7,15 +7,15 @@
     <meta name="description" content="" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <!-- Bootstrap CSS -->
-    <link rel="stylesheet" href="../login_static/css/bootstrap.min.css" />
+    <link rel="stylesheet" href="login_static/css/bootstrap.min.css" />
     <!-- Fontawesome CSS -->
-    <link rel="stylesheet" href="../login_static/css/fontawesome-all.min.css" />
+    <link rel="stylesheet" href="login_static/css/fontawesome-all.min.css" />
     <!-- Flaticon CSS -->
-    <link rel="stylesheet" href="../login_static/css/flaticon.css" />
+    <link rel="stylesheet" href="login_static/css/flaticon.css" />
     <!-- Google Web Fonts -->
-    <link href="../login_static/css/css.css" rel="stylesheet" />
+    <link href="login_static/css/css.css" rel="stylesheet" />
     <!-- Custom CSS -->
-    <link rel="stylesheet" href="../login_static/css/style.css" />
+    <link rel="stylesheet" href="login_static/css/style.css" />
   </head>
 
   <body>
@@ -65,7 +65,7 @@
           <div class="col-lg-3">
             <div class="fxt-header">
               <a href="login.html" class="fxt-logo">
-                <img src="../login_static/picture/logo-9.png" alt="Logo" />
+                <img src="login_static/picture/logo-9.png" alt="Logo" />
               </a>
             </div>
           </div>
@@ -115,17 +115,17 @@
       </div>
     </section>
     <!-- jquery-->
-    <script src="../login_static/js/jquery-3.5.0.min.js"></script>
+    <script src="login_static/js/jquery-3.5.0.min.js"></script>
     <!-- Bootstrap js -->
-    <script src="../login_static/js/bootstrap.min.js"></script>
+    <script src="login_static/js/bootstrap.min.js"></script>
     <!-- Imagesloaded js -->
-    <script src="../login_static/js/imagesloaded.pkgd.min.js"></script>
+    <script src="login_static/js/imagesloaded.pkgd.min.js"></script>
     <!-- YouTube js -->
-    <script src="../login_static/js/jquery.mb.YTPlayer.min.js"></script>
+    <script src="login_static/js/jquery.mb.YTPlayer.min.js"></script>
     <!-- Validator js -->
-    <script src="../login_static/js/validator.min.js"></script>
+    <script src="login_static/js/validator.min.js"></script>
     <!-- Custom Js -->
-    <script src="../login_static/js/main.js"></script>
+    <script src="login_static/js/main.js"></script>
     <script>
       // $("#submit_email").click(function () {
       //   // e.preventDefault();
