串最新消息、刪當地探索、寫死活動設施

--- a/src/main/resources/public/index.html
+++ b/src/main/resources/public/index.html
@@ -119,7 +119,7 @@
 
       <nav id="mainav" class="fl_right">
         <ul class="clear">
-          <li><a href="../index.html">首頁</a></li>
+          <li class="active"><a href="../index.html">首頁</a></li>
           <li><a class="drop" >關於我們</a>
             <ul>
               <li><a href="pages/intro.html">簡介</a></li>
@@ -140,18 +140,10 @@
             </ul>
           </li>
           <li><a href="pages/facility.html">活動設施</a></li>
-          <li><a class="drop" href="#">當地探索</a>
-            <ul>
-              <li><a href="#">自然景點</a></li>
-              <li><a href="#">藝術文化</a></li>
-              <li><a href="#">美食購物</a></li>
-            </ul>
-          </li>
           <li><a href="pages/contactUS.html">聯絡我們</a></li>
         </ul>
       </nav>
     </header>
-    <!-- ################################################################################################ -->
     <!-- ################################################################################################ -->
     <div id="pageintro" class="hoc clear">
       <!-- ################################################################################################ -->
@@ -165,17 +157,13 @@
           </ul>
         </footer>
       </article>
-      <!-- ################################################################################################ -->
     </div>
     <!-- ################################################################################################ -->
   </div>
   <!-- End Top Background Image Wrapper -->
   <!-- ################################################################################################ -->
-  <!-- ################################################################################################ -->
-  <!-- ################################################################################################ -->
   <div class="wrapper row1">
     <section id="ctdetails" class="hoc clear">
-      <!-- ################################################################################################ -->
       <ul class="nospace clear">
         <li class="one_quarter first">
           <div class="block clear"><a href="#"><i class="fas fa-phone"></i></a> <span><strong>聯絡電話：</strong> +00 (123)
@@ -194,11 +182,8 @@
               Directions to <a href="#">our location</a></span></div>
         </li>
       </ul>
-      <!-- ################################################################################################ -->
     </section>
   </div>
-  <!-- ################################################################################################ -->
-  <!-- ################################################################################################ -->
   <!-- ################################################################################################ -->
   <div class="wrapper row3">
     <main class="hoc container clear">
