--- a/src/main/resources/public/pages/booking.html
+++ b/src/main/resources/public/pages/booking.html
@@ -121,7 +121,7 @@
 
       <nav id="mainav" class="fl_right">
         <ul class="clear">
-          <li><a href="../index.html">首頁</a></li>
+          <li class="active"><a href="../index.html">首頁</a></li>
           <li><a class="drop">關於我們</a>
             <ul>
               <li><a href="intro.html">簡介</a></li>
@@ -142,13 +142,13 @@
             </ul>
           </li>
           <li><a href="facility.html">活動設施</a></li>
-          <li><a class="drop" href="#">當地探索</a>
+          <!-- <li><a class="drop" href="#">當地探索</a>
             <ul>
               <li><a href="#">自然景點</a></li>
               <li><a href="#">藝術文化</a></li>
               <li><a href="#">美食購物</a></li>
             </ul>
-          </li>
+          </li> -->
           <li><a href="contactUS.html">聯絡我們</a></li>
         </ul>
       </nav>
