--- a/src/main/resources/public/pages/traffic.html
+++ b/src/main/resources/public/pages/traffic.html
@@ -1,27 +1,21 @@
 <!DOCTYPE html>
-<!--
-Template Name: Nekmit
-Author: <a href="https://www.os-templates.com/">OS Templates</a>
-Author URI: https://www.os-templates.com/
-Copyright: OS-Templates.com
-Licence: Free to use under our free template licence terms
-Licence URI: https://www.os-templates.com/template-terms
--->
+
 <html lang="">
-<!-- To declare your language - read more here: https://www.w3.org/International/questions/qa-html-language-declarations -->
 <head>
   <title>iRelax Hotel | 關於我們 | 交通資訊</title>
   <meta charset="utf-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
 <link href="../layout/styles/layout.css" rel="stylesheet" type="text/css" media="all">
+<style>
+a {
+    color: #f3bf07;
+}
+</style>
 </head>
 <body id="top">
 <!-- ################################################################################################ -->
-<!-- ################################################################################################ -->
-<!-- ################################################################################################ -->
 <!-- Top Background Image Wrapper -->
 <div class="bgded overlay padtop" style="background-image:url('../images/backgrounds/01.png');"> 
-  <!-- ################################################################################################ -->
   <!-- ################################################################################################ -->
   <!-- ################################################################################################ -->
   <header id="header" class="hoc clear">
@@ -32,9 +26,6 @@ Licence URI: https://www.os-templates.com/template-terms
           <img src="../images/logo/logo2.png">
         </div>
       </a>
-      <!-- <h1><a href="../index.html" style="display:inline-block;">iRelax Hotel</a></h1> -->
-
-      <!-- ################################################################################################ -->
     </div>
 
     <nav id="mainav" class="fl_right">
@@ -60,13 +51,6 @@ Licence URI: https://www.os-templates.com/template-terms
           </ul>
         </li>
         <li><a href="facility.html">活動設施</a></li>
-        <li><a class="drop" href="#">當地探索</a>
-          <ul>
-            <li><a href="#">自然景點</a></li>
-            <li><a href="#">藝術文化</a></li>
-            <li><a href="#">美食購物</a></li>
-          </ul>
-        </li>
         <li><a href="contactUS.html">聯絡我們</a></li>
       </ul>
     </nav>
@@ -78,7 +62,7 @@ Licence URI: https://www.os-templates.com/template-terms
   <div id="breadcrumb" class="hoc clear" style="display: flex;  font-size: 150%; justify-content: space-evenly; flex-direction: row; margin: 0.5% 30% 0.5% 30%;"> 
     <p><a href="intro.html">簡介</a></p>
     <p>|</p>
-    <p><a href="#" class="active">交通資訊</a></p>
+    <p><a class="active" href="traffic.html">交通資訊</a></p>
     <p>|</p>
     <p><a href="notic.html">注意事項</a></p>
   </div>
