忘記密碼功能前後端連接完成

--- a/src/main/resources/public/frontend/forgot_password.html
+++ b/src/main/resources/public/frontend/forgot_password.html
@@ -73,7 +73,7 @@
             <div class="fxt-content">
               <h2>查詢密碼</h2>
               <div class="fxt-form">
-                <form id="abc" action="" method="">
+                <form id="email_submit" action="" method="">
                   <div class="form-group">
                     <div class="fxt-transformY-50 fxt-transition-delay-1">
                       <input
@@ -142,7 +142,7 @@
       //     dataType: "json"
       //   });
       // });
-      $("#abc").submit((e) => {
+      $("#email_submit").submit((e) => {
         e.preventDefault();
         console.log("clicked");
         var url = "/member/forgot_password";
