--- a/src/main/resources/public/frontend/change_password.html
+++ b/src/main/resources/public/frontend/change_password.html
@@ -1,50 +1,51 @@
 <!DOCTYPE html>
 <html class="no-js" lang="">
-  <head>
-    <meta charset="utf-8" />
-    <meta http-equiv="x-ua-compatible" content="ie=edge" />
-    <title>iRelax Hotel | 修改密碼</title>
-    <meta name="description" content="" />
-    <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <!-- Bootstrap CSS -->
-    <link rel="stylesheet" href="login_static/css/bootstrap.min.css" />
-    <!-- Fontawesome CSS -->
-    <link rel="stylesheet" href="login_static/css/fontawesome-all.min.css" />
-    <!-- Flaticon CSS -->
-    <link rel="stylesheet" href="login_static/css/flaticon.css" />
-    <!-- Google Web Fonts -->
-    <link href="login_static/css/css.css" rel="stylesheet" />
-    <!-- Custom CSS -->
-    <link rel="stylesheet" href="login_static/css/style.css" />
 
-    <!-- 
+<head>
+  <meta charset="utf-8" />
+  <meta http-equiv="x-ua-compatible" content="ie=edge" />
+  <title>iRelax Hotel | 修改密碼</title>
+  <meta name="description" content="" />
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <!-- Bootstrap CSS -->
+  <link rel="stylesheet" href="login_static/css/bootstrap.min.css" />
+  <!-- Fontawesome CSS -->
+  <link rel="stylesheet" href="login_static/css/fontawesome-all.min.css" />
+  <!-- Flaticon CSS -->
+  <link rel="stylesheet" href="login_static/css/flaticon.css" />
+  <!-- Google Web Fonts -->
+  <link href="login_static/css/css.css" rel="stylesheet" />
+  <!-- Custom CSS -->
+  <link rel="stylesheet" href="login_static/css/style.css" />
+
+  <!-- 
         https://blog.csdn.net/zhituji/article/details/50351661
         js验证input不为空且两次输入密码相同
      -->
-    <script>
-      function ifPwdEmpty() {
-        var pwd = document.getElementsByTagName("input");
-        for (var i = 0; i < pwd.length; i++) {
-          if (pwd[i].type == "password" && pwd[i].value == 0) {
-            alert("請輸入密碼！");
-            pwd[i].focus();
-            return false;
-          }
-        }
-        var newpassword = document.getElementById("newpassword");
-        var repasswourd = document.getElementById("repassword");
-        if (newpassword.value != repasswourd.value) {
-          alert("輸入密碼不一致，請重新輸入！");
-          repasswourd.value = "";
-          repasswourd.focus();
+  <script>
+    function ifPwdEmpty() {
+      var pwd = document.getElementsByTagName("input");
+      for (var i = 0; i < pwd.length; i++) {
+        if (pwd[i].type == "password" && pwd[i].value == 0) {
+          alert("請輸入密碼！");
+          pwd[i].focus();
           return false;
         }
       }
-    </script>
-  </head>
+      var newpassword = document.getElementById("newpassword");
+      var repasswourd = document.getElementById("repassword");
+      if (newpassword.value != repasswourd.value) {
+        alert("輸入密碼不一致，請重新輸入！");
+        repasswourd.value = "";
+        repasswourd.focus();
+        return false;
+      }
+    }
+  </script>
+</head>
 
-  <body>
-    <!--[if lt IE 8]>
+<body>
+  <!--[if lt IE 8]>
       <p class="browserupgrade">
         You are using an
         <strong>outdated</strong>
@@ -53,23 +54,18 @@
         to improve your experience.
       </p>
     <![endif]-->
-    <div id="preloader" class="preloader">
-      <div class="inner">
-        <div class="line1"></div>
-        <div class="line2"></div>
-        <div class="line3"></div>
-      </div>
+  <div id="preloader" class="preloader">
+    <div class="inner">
+      <div class="line1"></div>
+      <div class="line2"></div>
+      <div class="line3"></div>
     </div>
-    <section
-      class="fxt-template-animation fxt-template-layout24"
-      data-bg-image="img/figure/bg24-l.jpg"
-    >
-      <!-- Video Area Start Here -->
-      <div class="fxt-video-background">
-        <div class="fxt-video">
-          <div
-            id="fxtVideo"
-            data-property="{
+  </div>
+  <section class="fxt-template-animation fxt-template-layout24" data-bg-image="img/figure/bg24-l.jpg">
+    <!-- Video Area Start Here -->
+    <div class="fxt-video-background">
+      <div class="fxt-video">
+        <div id="fxtVideo" data-property="{
                     videoURL:'vCI2kmFJD_w', 
                     autoPlay:true, 
                     mute:true, 
@@ -80,107 +76,95 @@
                     showControls:false, 
                     optimizeDisplay:true,
                     containment:'.fxt-video-background'
-                }"
-          ></div>
-        </div>
+                }"></div>
       </div>
-      <!-- Video Area Start Here -->
-      <div class="container">
-        <div class="row align-items-center justify-content-center">
-          <div class="col-lg-3 col-12">
-            <div class="fxt-header">
-              <a href="login.html" class="fxt-logo">
-                <img src="login_static/picture/logo-9.png" alt="Logo" />
-              </a>
-            </div>
+    </div>
+    <!-- Video Area Start Here -->
+    <div class="container">
+      <div class="row align-items-center justify-content-center">
+        <div class="col-lg-3 col-12">
+          <div class="fxt-header">
+            <a href="login.html" class="fxt-logo">
+              <img src="login_static/picture/logo-9.png" alt="Logo" />
+            </a>
           </div>
-          <div class="col-lg-6 col-12">
-            <div class="fxt-content">
-              <h2>修改密碼</h2>
-              <div class="fxt-form">
-                <form method="POST">
-                  <div class="form-group">
-                    <div class="fxt-transformY-50 fxt-transition-delay-2">
-                      <input
-                        id="password"
-                        type="password"
-                        class="form-control"
-                        name="password"
-                        placeholder="請輸入原始密碼"
-                        required="required"
-                      />
-                      <i
-                        toggle="#password"
-                        class="fa fa-fw fa-eye toggle-password field-icon"
-                      ></i>
-                    </div>
+        </div>
+        <div class="col-lg-6 col-12">
+          <div class="fxt-content">
+            <h2>修改密碼</h2>
+            <div class="fxt-form">
+              <form id="email_reset" action="" method="">
+                <div class="form-group">
+                  <div class="fxt-transformY-50 fxt-transition-delay-2">
+                    <input id="newpassword" type="password" class="form-control" name="password" placeholder="請輸入新的密碼"
+                      required="required" />
+                    <i toggle="#newpassword" class="fa fa-fw fa-eye toggle-password field-icon"></i>
                   </div>
-                  <div class="form-group">
-                    <div class="fxt-transformY-50 fxt-transition-delay-2">
-                      <input
-                        id="newpassword"
-                        type="password"
-                        class="form-control"
-                        name="password"
-                        placeholder="請輸入新的密碼"
-                        required="required"
-                      />
-                      <i
-                        toggle="#newpassword"
-                        class="fa fa-fw fa-eye toggle-password field-icon"
-                      ></i>
-                    </div>
-                  </div>
-                  <div class="form-group">
-                    <div class="fxt-transformY-50 fxt-transition-delay-2">
-                      <input
-                        id="repassword"
-                        type="password"
-                        class="form-control"
-                        name="password"
-                        placeholder="請再次輸入新的密碼"
-                        required="required"
-                      />
-                      <i
-                        toggle="#repassword"
-                        class="fa fa-fw fa-eye toggle-password field-icon"
-                      ></i>
-                    </div>
-                  </div>
-
-                  <div class="form-group">
-                    <div class="fxt-transformY-50 fxt-transition-delay-4">
-                      <button type="submit" class="fxt-btn-fill">送出</button>
-                    </div>
-                  </div>
-                </form>
-              </div>
-              <div class="fxt-footer">
-                <div class="fxt-transformY-50 fxt-transition-delay-9">
-                  <p>
-                    已經擁有帳號了?
-                    <a href="login.html" class="switcher-text2 inline-text">
-                      登錄
-                    </a>
-                  </p>
                 </div>
+                <div class="form-group">
+                  <div class="fxt-transformY-50 fxt-transition-delay-2">
+                    <input id="repassword" type="password" class="form-control" name="password" placeholder="請再次輸入新的密碼"
+                      required="required" />
+                    <i toggle="#repassword" class="fa fa-fw fa-eye toggle-password field-icon"></i>
+                  </div>
+                </div>
+
+                <div class="form-group">
+                  <div class="fxt-transformY-50 fxt-transition-delay-4">
+                    <button type="submit" class="fxt-btn-fill">送出</button>
+                  </div>
+                </div>
+              </form>
+            </div>
+            <div class="fxt-footer">
+              <div class="fxt-transformY-50 fxt-transition-delay-9">
+                <p>
+                  已經擁有帳號了?
+                  <a href="login.html" class="switcher-text2 inline-text">
+                    登錄
+                  </a>
+                </p>
               </div>
             </div>
           </div>
         </div>
       </div>
-    </section>
-    <!-- jquery-->
-    <script src="login_static/js/jquery-3.5.0.min.js"></script>
-    <!-- Bootstrap js -->
-    <script src="login_static/js/bootstrap.min.js"></script>
-    <!-- Imagesloaded js -->
-    <script src="login_static/js/imagesloaded.pkgd.min.js"></script>
-    <!-- YouTube js -->
-    <script src="login_static/js/jquery.mb.YTPlayer.min.js"></script>
-    <!-- Validator js -->
-    <script src="login_static/js/validator.min.js"></script>
-    <!-- Custom Js -->
-    <script src="login_static/js/main.js"></script>
-  </body>
+    </div>
+  </section>
+  <!-- jquery-->
+  <script src="login_static/js/jquery-3.5.0.min.js"></script>
+  <!-- Bootstrap js -->
+  <script src="login_static/js/bootstrap.min.js"></script>
+  <!-- Imagesloaded js -->
+  <script src="login_static/js/imagesloaded.pkgd.min.js"></script>
+  <!-- YouTube js -->
+  <script src="login_static/js/jquery.mb.YTPlayer.min.js"></script>
+  <!-- Validator js -->
+  <script src="login_static/js/validator.min.js"></script>
+  <!-- Custom Js -->
+  <script src="login_static/js/main.js"></script>
+  <script>
+    let urlParams = new URLSearchParams(window.location.search);
+    console.log(urlParams);
+    console.log(urlParams.get('token'));
+    $("#email_reset").submit((e) => {
+      e.preventDefault();
+      console.log("clicked");
+      var token = urlParams.get('token');
+      var url = "/member/reset_password?token=" + token;
+      var newpassword = $("#newpassword").val();
+      var data = '{"passwd":"' + newpassword + '"}';
+      console.log(data);
+      $.ajax({
+        type: "POST",
+        url: url,
+        data: data,
+        headers: { "Content-Type": "application/json;charset=utf8" },
+      }).done(function (msg) {
+        alert(msg);
+      });
+    });
+  </script>
+</body>
+
 </html>
