首頁家會員中心＋改房型一覽

--- a/src/main/resources/public/index.html
+++ b/src/main/resources/public/index.html
@@ -35,10 +35,9 @@
       -webkit-line-clamp: 3;
       overflow: hidden;
     }
-
   </style>
-  <script src="assets/js/jquery.js"></script>
 
+  <script src="assets/js/jquery.js"></script>
   <script>
     $.ajax({
       url: '/hotelNews/',
@@ -95,16 +94,19 @@
         })
       });
   </script>
+  <script>
+
+  </script>
   
 </head>
 
 <body id="top">
   <!-- Top Background Image Wrapper -->
   <div class="bgded overlay padtop" style="background-image:url('images/backgrounds/01.png');">
-    <div class="hoc clear" style="text-align: right; text-align: bottom;width: 1200px; height: 40px;">
-      <i class="far fa-snowflake fa-2x"></i>
-      <i class="fas fas fa-globe fa-2x" ß></i>
+    <div class="" style="width: 1200px; height: 40px; flex-wrap:nowrap; text-align: right; padding: 5px 2px;">
+      <i class="far fa-snowflake fa-2x"></i>&emsp;
       <i class="fas fa-user-circle fa-2x"></i>
+      <span style="font-size: 16px;color: #f3bf07; text-align:center;padding: 50px 2px;">會員中心</span>
     </div>
 
     <header id="header" class="hoc clear">
@@ -382,7 +384,6 @@
       </div>
     </footer>
   </div>
-  <!-- ################################################################################################ -->
   <!-- ################################################################################################ -->
   <div class="wrapper row5">
     <div id="copyright" class="hoc clear">
