--- a/src/main/resources/public/pages/room.html
+++ b/src/main/resources/public/pages/room.html
@@ -116,7 +116,7 @@
     <br>
     <div id="breadcrumb" class="hoc clear"
       style="display: flex;font-size: 150%; justify-content: space-evenly; flex-direction: row; margin: 0.5% 30% 0.5% 30%;">
-      <p><a class="active" href="#">房型ㄧ覽</a></p>
+      <p><a class="active" href="#">房型一覽</a></p>
       <p>|</p>
       <p><a href="booking.html">立即訂房</a></p>
     </div>
