串line聊天機器人

--- a/src/main/resources/public/pages/intro.html
+++ b/src/main/resources/public/pages/intro.html
@@ -105,7 +105,7 @@
       <ul class="faico clear">
         <li><a class="faicon-facebook" href="#"><i class="fab fa-facebook"></i></a></li>
         <li><a class="faicon-google-plus" href="#"><i class="fab fa-google-plus-g"></i></a></li>
-        <li><a class="faicon-line" href="#"><i class="fab fa-line"></i></a></li>
+        <li><a class="faicon-line" href="https://line.me/R/ti/p/%40440rucgj"><i class="fab fa-line"></i></a></li>
         <li><a class="faicon-twitter" href="#"><i class="fab fa-twitter"></i></a></li>
       </ul>
     </div>
