--- a/src/main/resources/public/back_end-v6/pages/auth/login.html
+++ b/src/main/resources/public/back_end-v6/pages/auth/login.html
@@ -1,89 +1,72 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta http-equiv="X-UA-Compatible" content="ie=edge" />
-    <title>iRelax Hotel 後台管理系統</title>
-    <!-- core:css -->
-    <link rel="stylesheet" href="../../../assets/vendors/core/core.css" />
-    <!-- endinject -->
-    <!-- plugin css for this page -->
-    <!-- end plugin css for this page -->
-    <!-- inject:css -->
-    <link
-      rel="stylesheet"
-      href="../../../assets/fonts/feather-font/css/iconfont.css"
-    />
-    <link
-      rel="stylesheet"
-      href="../../../assets/vendors/flag-icon-css/css/flag-icon.min.css"
-    />
-    <!-- endinject -->
-    <!-- Layout styles -->
-    <link rel="stylesheet" href="../../../assets/css/demo_1/style.css" />
-    <!-- End layout styles -->
-    <link rel="shortcut icon" href="../../../assets/images/favicon.png" />
-  </head>
-  <body class="sidebar-dark">
-    <div class="main-wrapper">
-      <div class="page-wrapper full-page">
-        <div
-          class="page-content d-flex align-items-center justify-content-center"
-        >
-          <div class="row w-100 mx-0 auth-page">
-            <div class="col-md-8 col-xl-6 mx-auto">
-              <div class="card">
-                <div class="row">
-                  <div class="col-md-4 pr-md-0">
-                    <div class="auth-left-wrapper"></div>
-                  </div>
-                  <div class="col-md-8 pl-md-0">
-                    <div class="auth-form-wrapper px-4 py-5">
-                      <a href="#" class="noble-ui-logo d-block mb-2">
-                        iRelax
-                        <span>Hotel 後台管理系統</span>
-                      </a>
-                      <h5 class="text-muted font-weight-normal mb-4"></h5>
-                      <form class="forms-sample">
-                        <div class="form-group">
-                          <label for="exampleInputEmail1">帳號</label>
-                          <input
-                            type="account"
-                            class="form-control"
-                            id="account"
-                            placeholder="請輸入帳號"
-                          />
-                        </div>
-                        <div class="form-group">
-                          <label for="exampleInputPassword1">密碼</label>
-                          <input
-                            type="password"
-                            class="form-control"
-                            id="exampleInputPassword1"
-                            autocomplete="current-password"
-                            placeholder="請輸入密碼"
-                          />
-                        </div>
-                        <div
-                          class="form-check form-check-flat form-check-primary"
-                        >
-                          <label class="form-check-label">
-                            <input type="checkbox" class="form-check-input" />
-                            記住我
-                          </label>
-                        </div>
-                        <div class="mt-3">
-                          <a
-                            href="../../index.html"
-                            class="btn btn-primary mr-2 mb-2 mb-md-0 text-white"
-                          >
-                            登錄
-                          </a>
-                        </div>
+
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <meta http-equiv="X-UA-Compatible" content="ie=edge" />
+  <title>iRelax Hotel 後台管理系統</title>
+  <!-- core:css -->
+  <link rel="stylesheet" href="../../../assets/vendors/core/core.css" />
+  <!-- endinject -->
+  <!-- plugin css for this page -->
+  <!-- end plugin css for this page -->
+  <!-- inject:css -->
+  <link rel="stylesheet" href="../../../assets/fonts/feather-font/css/iconfont.css" />
+  <link rel="stylesheet" href="../../../assets/vendors/flag-icon-css/css/flag-icon.min.css" />
+  <!-- endinject -->
+  <!-- Layout styles -->
+  <link rel="stylesheet" href="../../../assets/css/demo_1/style.css" />
+  <!-- End layout styles -->
+  <link rel="shortcut icon" href="../../../assets/images/favicon.png" />
+  <script src="https://www.google.com/recaptcha/api.js" async defer></script>
+</head>
+
+<body class="sidebar-dark">
+  <div class="main-wrapper">
+    <div class="page-wrapper full-page">
+      <div class="page-content d-flex align-items-center justify-content-center">
+        <div class="row w-100 mx-0 auth-page">
+          <div class="col-md-8 col-xl-6 mx-auto">
+            <div class="card">
+              <div class="row">
+                <div class="col-md-4 pr-md-0">
+                  <div class="auth-left-wrapper"></div>
+                </div>
+                <div class="col-md-8 pl-md-0">
+                  <div class="auth-form-wrapper px-4 py-5">
+                    <a href="#" class="noble-ui-logo d-block mb-2">
+                      iRelax
+                      <span>Hotel 後台管理系統</span>
+                    </a>
+                    <h5 class="text-muted font-weight-normal mb-4"></h5>
+                    <form class="forms-sample" action="../../index.html" method="GET">
+                      <div class="form-group">
+                        <label for="exampleInputEmail1">帳號</label>
+                        <input type="account" class="form-control" id="account" placeholder="請輸入帳號" />
+                      </div>
+                      <div class="form-group">
+                        <label for="exampleInputPassword1">密碼</label>
+                        <input type="password" class="form-control" id="exampleInputPassword1"
+                          autocomplete="current-password" placeholder="請輸入密碼" />
+                      </div>
+                      <div class="form-check form-check-flat form-check-primary">
+                        <label class="form-check-label">
+                          <input type="checkbox" class="form-check-input" />
+                          記住我
+                        </label>
+                      </div>
+                      <div class="g-recaptcha" data-sitekey="6LfjzUYkAAAAABlzNdNOksEqnMfEAUG3a8kwdyOU"
+                        data-callback="verify" data-expired-callback="expired" data-error-callback="error">
+                      </div>
+                      <div class="mt-3">
+                        <a id="verify" href="../../index.html" class="btn btn-primary mr-2 mb-2 mb-md-0 text-white"
+                          hidden>
+                          登錄
                         </a>
-                      </form>
-                    </div>
+                      </div>
+                      </a>
+                    </form>
                   </div>
                 </div>
               </div>
@@ -92,17 +75,59 @@
         </div>
       </div>
     </div>
+  </div>
 
-    <!-- core:js -->
-    <script src="../../../assets/vendors/core/core.js"></script>
-    <!-- endinject -->
-    <!-- plugin js for this page -->
-    <!-- end plugin js for this page -->
-    <!-- inject:js -->
-    <script src="../../../assets/vendors/feather-icons/feather.min.js"></script>
-    <script src="../../../assets/js/template.js"></script>
-    <!-- endinject -->
-    <!-- custom js for this page -->
-    <!-- end custom js for this page -->
-  </body>
+  <script>
+    function verify(token) {
+      var formData = new FormData();
+      formData.append('token', token);
+
+      // Google Apps Script 部署為網路應用程式後取得的 URL
+      var uriGAS = "https://script.google.com/macros/s/AKfycbx_Usin0gxpagwEFadFO60clzuBoMEp-C_uWl0wVWf-E7jACJRNvpLFnvoNo7LZHZEqkQ/exec";
+
+      $.ajax({
+        type: "POST",
+        url: uriGAS,
+        data: {
+          secret: '6LfjzUYkAAAAAGfGphmAurznAqAh-7tW-DtLicJP',
+          token: token
+        },
+        success: function (response) {
+          console.log(response);
+          if (response.success) {
+            console.log("OK");
+          } else {
+            console.log("XX");
+          }
+        },
+        error: function (err) {
+          console.log(err);
+        }
+      });
+    }
+    
+    // 過期要做的事
+    function expired(ex) {
+      window.alert('reCAPTCHA 驗證程序到期')
+    }
+
+    // 失敗要做的事
+    function error(err) {
+      window.alert('reCAPTCHA 驗證失敗')
+    }
+  </script>
+
+  <!-- core:js -->
+  <script src="../../../assets/vendors/core/core.js"></script>
+  <!-- endinject -->
+  <!-- plugin js for this page -->
+  <!-- end plugin js for this page -->
+  <!-- inject:js -->
+  <script src="../../../assets/vendors/feather-icons/feather.min.js"></script>
+  <script src="../../../assets/js/template.js"></script>
+  <!-- endinject -->
+  <!-- custom js for this page -->
+  <!-- end custom js for this page -->
+</body>
+
 </html>
